Start load on view opened, survive screen orientation change, abort loading on view closed

--- a/BasicSample/app/build.gradle
+++ b/BasicSample/app/build.gradle
@@ -85,4 +85,10 @@ dependencies {
     androidTestImplementation deps.support.v4
     androidTestImplementation deps.support.app_compat
     androidTestImplementation deps.support.design
+
+    implementation deps.room.rxjava2
+
+    // RxJava
+    implementation deps.rx_android
+    implementation deps.rxjava2
 }
